# Aether2

./: .gitignore  FEATURE_CHECKLIST.md  Makefile  README.md  aether.toml  debug_parser_tokens.go  go.mod  go.sum
.cursor/rules/: dry-principle.mdc
.github/workflows/: go.yml  release.yml
assets/: changelog.txt  description.txt  homepage.txt  maintainer.txt
assets/android/: README.txt
assets/appimage/: aether.desktop
assets/debian/: control  postinst  prerm
assets/flatpak/: org.aether.Aether.desktop  org.aether.Aether.yaml
assets/freebsd/: README.txt
assets/macos/: README.txt
assets/macos/scripts/: postinstall  preinstall
assets/netbsd/: README.txt
assets/openbsd/: README.txt
assets/rpm/: post-install.sh  pre-remove.sh
assets/windows/: README.txt  aether.bat
cmake/: AetherConfig.cmake
cmd/aether2/: aether2.go  build_cmd.go  clean_cmd.go  codemod_cmd.go  cross_cmd.go  deps_cmd.go  docs_cmd.go  doctor_cmd.go  format_cmd.go  info_cmd.go  init_cmd.go  library_cmd.go  linter_cmd.go  new_cmd.go  package_cmd.go  playground_cmd.go  scaffold_cmd.go  test_cmd.go  update_cmd.go  version_cmd.go
docs/: README.md  debugging.md  error-codes.md  learning.md  reimagined-imports.md  self-hosting-plan.md  simple-packages.md  troubleshooting.md
docs/0.1.0-llvm1/: specs.md  syntax.md
docs/0.1.0-llvm1/compiler/: README.md
docs/0.1.0-nightly/: syntax.md
docs/0.2.0-nightly/: aether-error-handling.md  installation.md  llvm.md  specs.md  syntax.md
docs/0.2.0-nightly/compiler/: README.md
docs/0.2.0-tinygo1/: llvm.md
docs/0.3.0-nightly/: aether-toml.md  compiler-flags.md  installation.md  specs.md  syntax.md
docs/0.4.0-nightly/: bindings.md  hmr.md  installation.md  stdlib.md  syntax.md
examples/: README_NEW_FEATURES.md
examples/cmake_demo/: CMakeLists.txt  Makefile  README.md
examples/cmake_demo/src/: cryptolib.aeth  main.aeth  mathlib.aeth
examples/codemod_demo/src/: test.aeth
examples/compiler_flags_demo/: aether.toml
examples/config_demo/: aether.toml
examples/config_demo/src/: main.aeth
examples/helloworld/: .gitignore  aether.toml  depmod.ae  main.ae
examples/helloworld/src/: main.aeth  main.aeth.ll
examples/interactive_demo/: README.md
examples/library_demo/: README.md
examples/library_demo/src/: main.aeth  mathlib.aeth
lib/core/: depmod.ae
lib/utils/: errormsg.go  perror.go
scripts/codemods/fixes/: no_semi.go
scripts/commit/: contribute.sh
scripts/prerequisites/: aria2.sh  mold.sh
src/: main.ae
src/analysis/: aetherroot.go  analysis.go  c_includes.go  external_libs.go  imports.go  stdlib.go  toposort.go  types.go
src/buildcache/: cache.go
src/codemod/: codemod.go
src/compiler/: aether_structures.aeth  analysis.go  compile.go  context.go  example_usage.aeth  expr.go  flags.go  function.go  module.go  ret.go  stmt.go  test_structures.aeth  types.go
src/lexer/: lexer.go  token.go
src/parser/: ast.go  blockstatements.go  control.go  declarations.go  expressions.go  parser.go  printjson.go  statements.go
src/scheduler/: bigfile.go  deps.go  pool.go  run.go
src/stdlib/: c.ae  math.ae  print.ae  printf.ae
tests/parser/: README.md  array_test.go  assignment_test.go  blocks_test.go  break_continue_test.go  call_test.go  chained_access_test.go  chaining_test.go  comments_test.go  concat_test.go  edge_literals_test.go  error_handling_test.go  error_recovery_test.go  expressions_test.go  func_test.go  identifiers_test.go  if_test.go  import_test.go  lambda_test.go  literals_test.go  loops_test.go  misc_test.go  nested_constructs_test.go  operators_test.go  partial_application_test.go  pattern_matching_test.go  property_access_test.go  return_test.go  spread_test.go  statements_test.go  stdlib_test.go  struct_test.go  tuple_destructuring_test.go  types_test.go  whitespace_test.go
tools/: aetherc.go
tools/aetherc/: aetherc.go  generator.go  parser.go  types.go
tools/vscode/aether-syntax/: CHANGELOG.md  README.md  aether-syntax-0.0.1.vsix  aether-syntax-0.0.2.vsix  package.json  vsc-extension-quickstart.md
tools/vscode/aether-syntax/snippets/: aether.json
tools/vscode/aether-syntax/syntaxes/: aether.tmLanguage.json
